src/assets/css/crew.css
@import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Barlow+Condensed&family=Bebas+Neue&family=Bellefair&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');

/* font-family: 'ADLaM Display', cursive;
font-family: 'Barlow Condensed', sans-serif;
font-family: 'Bebas Neue', sans-serif;
font-family: 'Bellefair', serif;
font-family: 'Roboto', sans-serif; */

*,*::before,*::after{
    box-sizing: border-box;
}

:root{
    /* color variables */

    --main-color:rgba(255, 255, 255);
    --secondary-color:#D0D6F9;
    --miscellaneous-color:#0B0D17;

    /*other sizings */
    --circle-radius:274px;
}

body{
    margin: 0;
    padding: 0;
    height: 100dvh;
    background: url(../images/crew/background-crew-desktop.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    color:var(--secondary-color);
    position: relative;
    overflow: hidden;
    display: grid;
    justify-content: center;
    align-items: end;
    
   
}


.content{
    display: flex;
    width: 100vw;
    height: 50%;
    margin-bottom: 0;
    margin: 0;
    height: 90%;
    
   
}

.main-content{
    width: 35%;
    padding-top: 3%;
    display:flex;
    flex-direction: column;
    gap: 100px;
    margin-left: 10%;
    position: relative;
}
.crew-image{
    display: flex;
    align-items: flex-end;
    width: 30%;
}

.crew-image img{
    height: 95%;
}

.description-wrapper{
    flex:1; /*makes the element fill the rest of the container*/
}

.crew-position{
    margin-bottom: 0;
    color: #979797;
    
}

.crew-name{
    margin-top: 15px;
    margin-bottom: 15px;
}
.crew-info{
width: 70%;
color: var(--secondary-color);;
}

.current-crew{
    list-style: none;
    display: flex;
    gap: 24px;
   position: absolute;
   left: 0;
   bottom: 300px;
   margin: 0;
   margin-top: 0;
   padding: 0;
}

.current-crew li{
    background-color: #979797;
    border-radius: 50%;
    width: 15px;
    height: 15px;
}
.current-crew li:hover{
    cursor: pointer;
}
.current-crew .selected{
    background-color: var(--main-color);

}

.crew-description{
    display: none;
}

.visible{
    display: block;
}

/* Responsive css */

/* layout for tablets */
@media (max-width:912px){
    body{
        background-image: url(../images/crew/background-crew-tablet.jpg);
    }
    
}

